# ExercisesCompGrafica

./: .gitignore
histograma/: CMakeLists.txt  histograma.cpp
opencv-rizzo-examples/: README.eo.md  README.md  README.pt-BR.md
opencv-rizzo-examples/include/: image.hpp
opencv-rizzo-examples/src/: CMakeLists.txt  avg.cpp  bgr2gray.cpp  bgr2hsv.cpp  draw.cpp  effect_image.cpp  filtros.cpp  gray_image.cpp  image_lib.cpp  info_image.cpp  putText.cpp  types.cpp  work_image.cpp
teste/: DisplayImage.cpp
transform/: CMakeLists.txt  transform.cpp
