cmake_minimum_required(VERSION 2.8)
project( opencv-rizzo-examples )

find_package( OpenCV REQUIRED )
find_package (Eigen3 3.3 REQUIRED NO_MODULE)

include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable( bgr2gray bgr2gray.cpp )
add_executable( bgr2hsv bgr2hsv.cpp )
add_executable( avg avg.cpp )
add_executable( draw draw.cpp )
add_executable( gray_image gray_image.cpp )
add_executable( filtros filtros.cpp )
add_executable( list_mouse_events list_mouse_events.cpp )
add_executable( mouse mouse.cpp )
add_executable( mouse2 mouse2.cpp )
add_executable( mouse3 mouse3.cpp )
add_executable( open_image open_image.cpp )
add_executable( show_image show_image.cpp )
add_executable( types types.cpp )
add_executable( waitkey waitkey.cpp )

target_link_libraries( bgr2gray ${OpenCV_LIBS} )
target_link_libraries( bgr2hsv ${OpenCV_LIBS} )
target_link_libraries( avg ${OpenCV_LIBS} )
target_link_libraries( draw ${OpenCV_LIBS} Eigen3::Eigen )
target_link_libraries( filtros ${OpenCV_LIBS} )
target_link_libraries( gray_image ${OpenCV_LIBS} )
target_link_libraries( list_mouse_events ${OpenCV_LIBS} )
target_link_libraries( mouse ${OpenCV_LIBS} )
target_link_libraries( mouse2 ${OpenCV_LIBS} )
target_link_libraries( mouse3 ${OpenCV_LIBS} )
target_link_libraries( open_image ${OpenCV_LIBS} )
target_link_libraries( show_image ${OpenCV_LIBS} )
target_link_libraries( types ${OpenCV_LIBS} )
target_link_libraries( waitkey ${OpenCV_LIBS} )
